[package]
name = "xo_ai"
version = "0.1.0"
authors = ["Amit Sari <amitsari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[profile.dev]
opt-level = 3

[dependencies]
text_io = "0.1.9"
rand = "0.8.4"